[tool.poetry]
name = "AoC2021"
version = "0.1.0"
description = "Solutions to Advent of Code 2021 problems"
authors = ["Daniel Halligan <dan.halligan@fiosgenomics.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
typer = "^0.3.2"
numpy = "^1.21.4"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aoc2021 = "aoc2021.cli:main"
